Refactor file path assignment in ProcessDictionary
Removed the Paths import and updated the file path assignment method from Paths.get to Path.of in the ProcessDictionary class. This revision makes the code slightly cleaner by removing an unnecessary import and is adhering to more modern Java practices.